# pysnake

./: README.md  basics.py  pyproject.toml  settings.py
src/: field.py  game.py  main.py  snake.py
